--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,42 @@
 body{
     margin: 0;
 }
+    .modal {
+        display: none;
+        position: fixed;
+        z-index: 1;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        overflow: auto;
+        background-color: rgba(0, 0, 0, 0.8);
+      }
+      .modal-content {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin: 20% auto;
+        padding: 20px;
+        background-color: #fefefe;
+        border: 1px solid #888;
+        border-radius: 4px;
+        max-width: 400px;
+        text-align: center;
+      }
+      #qr-code {
+        max-width: 100%;
+      }
+      #qr-code-id {
+        margin-top: 10px;
+      }
+      .close-btn {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        cursor: pointer;
+      }
 
 /* Heading */
 .heading h2{
@@ -39,6 +75,7 @@ body{
     text-decoration: none !important;
     transition: all 0.5s;
 }
+
 .btn1:hover{
     background-color: #e6edff;
     color: #303054;
@@ -399,3 +436,44 @@ footer .social a img{
     font-size: 18px;
     color: #333;
 }
+.popup {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.6);
+    z-index: 9999;
+  }
+  .pop-image {
+    position: relative;
+    max-width: 90%;
+    max-height: 90%;
+    background-color: #302F3D;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .pop-image img {
+    max-width: 100%;
+    height: auto;
+  }
+  
+  .pop-image span {
+    position: absolute;
+    top: -3px;
+    right: 2px;
+    font-size: 25px;
+    cursor: pointer;
+    color: #FFf;
+  }
+  .pop-image p {
+    font-size: 16px;
+    margin-top: 10px;
+    color: #fff;
+  }
